--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MOMNGODB_USERNAME=Karthik
 MONGODB_PASSWORD=PpRXb8DZDgtV9vsQ
+MONGODB_URI=mongodb+srv://Karthik:PpRXb8DZDgtV9vsQ@cluster.mongodb.net/Database?retryWrites=true&w=majority
